--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.1.0",
     "jsdoc": "^3.4.0",
     "jsdoc-oblivion": "0.0.4",
+    "modularscale-sass": "^3.0.5",
     "node-sass": "^3.8.0",
     "on-build-webpack": "^0.1.0",
     "parallelshell": "^2.0.0",
